force-app/main/default/objects/Publishing_Inclusions__c/Publishing_Inclusions__c.object-meta.xml
<CustomObject>
    <label>Publishing Inclusions</label>
    <nameField>
        <label>Publishing Inclusions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publishing Inclusions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>