force-app/main/default/objects/Publishing_Inclusions__c/fields/Default_Text__c.field-meta.xml
<CustomField>
    <fullName>Default_Text__c</fullName>
    <label>Default Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>