force-app/main/default/objects/Publishing_Inclusions__c/fields/Full_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Formula__c</fullName>
    <formula>Name+ &apos;   &apos; +  Icon_Label_Image__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name Formula</label>
    <type>Text</type>
</CustomField>