force-app/main/default/objects/Publishing_Inclusions__c/fields/Icon_Label__c.field-meta.xml
<CustomField>
    <fullName>Icon_Label__c</fullName>
    <formula>TRIM(right(Icon__c , (LEN( Icon__c) - 6)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icon Label</label>
    <type>Text</type>
</CustomField>