force-app/main/default/objects/Publishing_Inclusions__c/fields/Icon_Label_Image__c.field-meta.xml
<CustomField>
    <fullName>Icon_Label_Image__c</fullName>
    <formula>IMAGE(&quot;/resource/DealInclusion/svgtopng/&quot;+ Icon_Label__c +&quot;.png&quot;,&quot;low&quot;,20,20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icon Label Image</label>
    <type>Text</type>
</CustomField>