force-app/main/default/objects/Publishing_Inclusions__c/recordTypes/Deal.recordType-meta.xml
<RecordType>
    <fullName>Deal</fullName>
    <active>true</active>
    <description>Deal Includions</description>
    <label>Deal</label>
</RecordType>