force-app/main/default/objects/Publishing_Inclusions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Icon__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Icon_Label__c</columns>
    <columns>Icon_Label_Image__c</columns>
    <columns>Full_Name_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>